--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 script:
   - go get -t -v ./...
   - go test -v -race ./...
-  - gox -os="linux darwin" -arch="amd64 arm" -output="logshare.." -ldflags "-X cmd.Revision=`git describe --always`" -verbose ./...;
+  - gox -os="linux darwin" -arch="amd64" -output="logshare.." -ldflags "-X cmd.Revision=`git describe --always`" -verbose ./...;
 
 
 deploy:
